--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-  background-image: url(./fundo.png); /* FUNDO*/
+  background-image: url(./Fundo.png); /* FUNDO*/
   background-repeat: no-repeat;
   background-position:top center;
  
